--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.2",
     "react-on-screen": "^2.1.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
