--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.10.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^9.18.0",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
